# HAL_Project

./: Cargo.toml  Lab1 : Put your PIN High or Low  Lab1.1 : Write and Read your PIN  Lab1.2 : Input_Output your PIN  Lab1_Explanation.txt  README.md
Notes/: .~lock.Problems.odt#  Problems.odt
examples/: atmega328p_serial.rs  cortex_m3_serial.rs
src/: Lab1.rs  lib.rs  main.rs
src/I2C/: atmega328p.rs  cortex_m3.rs  mod.rs
src/drivers/: mod.rs
src/gpio/: atmega328p.rs  cortex_m3.rs  mod.rs  test_gpio.rs  traits.rs
src/hal/: mod.rs  target.rs
src/spi/: atmega328p.rs  cortex_m3.rs  mod.rs
src/usart/: atmega328p.rs  cortex_m3.rs  mod.rs  traits.rs
